--- a/Flask_teste/templates/index.html
+++ b/Flask_teste/templates/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<Title>Minha Primeira Página</Title>
-</head>
-<body>
-	<h1>Olá, Mundo!</h1>
-	<p>Este é um parágrafo de exemplo.</p>
-	<a href=https://www.youtube.com>Vamos Ver Youtube?</a>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="style.css">
+		<Title>Minha Primeira Página</Title>
+	</head>
+	<body>
+		<h1>Olá, Mundo!</h1>
+		<p>Este é um parágrafo de exemplo.</p>
+		<a href=https://www.youtube.com>Vamos Ver Youtube?</a>
+	</body>
 </html>
-
