remove www.html

--- a/Flask_teste/templates/index.html
+++ b/Flask_teste/templates/index.html
@@ -9,6 +9,6 @@
 	<body>
 		<h1>Olá, Mundo!</h1>
 		<p>Este é um parágrafo de exemplo.</p>
-		<a href=https://www.youtube.com>Vamos Ver Youtube?</a>
+		<a href=https://youtube.com>Vamos Ver Youtube?</a>
 	</body>
 </html>
