Implement media queries

--- a/exercício_html_css_2/style.css
+++ b/exercício_html_css_2/style.css
@@ -31,8 +31,6 @@ img:hover{
 	opacity: 0.88;
 }
 
-
-
 button{
 	width: 240px;
 	height: 40px;
@@ -61,13 +59,13 @@ button{
 }
 
 button:hover{
-	
+	opacity: 0.85;
 }
 
-button:focus{
-	transform: none;
-	box-shadow: none;
-	
+
+@media (max-width: 875px){
+	img{
+		width: 30%;
+		height: 30%;
 }
 
-@media()
